--- a/blocks.html
+++ b/blocks.html
@@ -1,5 +1,80 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Resources</title>
+    <style>
+      
+
+      body {
+        background-color: #f5f5f5;
+        color: #222;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+          Roboto, "Helvetica Neue", Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+      }
+
+      h1 {
+        text-align: center;
+        color: #5e001f; /* Concordia burgundy */
+        margin-top: 40px;
+        margin-bottom: 30px;
+        font-size: 1.8rem;
+      }
+
+      label {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        max-width: 500px;
+        background-color: #fff;
+        border: 1px solid #ddd;
+        border-radius: 6px;
+        padding: 12px 16px;
+        margin: 10px auto;
+        font-weight: 600;
+      }
+
+      .status {
+        background-color: #fff;
+        color: #5e001f;
+        border: 1px solid #5e001f;
+        border-radius: 4px;
+        padding: 6px 14px;
+        font-size: 0.9rem;
+        font-weight: 600;
+        cursor: pointer;
+        transition: all 0.2s ease;
+      }
+
+      .status:hover {
+        background-color: #5e001f;
+        color: #fff;
+        box-shadow: 0 4px 10px rgba(94, 0, 31, 0.3);
+      }
+
+      #goBack {
+        display: block;
+        margin: 30px auto;
+        background-color: #5e001f;
+        color: #fff;
+        border: 1px solid #5e001f;
+        border-radius: 4px;
+        padding: 10px 20px;
+        font-size: 0.95rem;
+        font-weight: 600;
+        cursor: pointer;
+        transition: all 0.2s ease;
+      }
+
+      #goBack:hover {
+        background-color: #440017;
+        box-shadow: 0 4px 10px rgba(68, 0, 23, 0.4);
+      }
+    </style>
+  </head>
+
   <body>
     <h1>Resources =</h1>
     <label>
@@ -22,6 +97,7 @@
     >
     <br />
     <button id="goBack" type="button">Go Back To Dashboard</button>
+
     <script>
       const statusResources = document.querySelectorAll(".status");
       for (let i = 0; i < statusResources.length; i++) {
