--- a/changeUsername.html
+++ b/changeUsername.html
@@ -1,28 +1,158 @@
 <!DOCTYPE html>
-<html>
-  <title>Change Username</title>
-  <style>
-    h1 {
-      text-align: center;
-    }
-    label {
-      display: block;
-      text-align: center;
-    }
-  </style>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Change Username</title>
+
+    <style>
+      
+      * {
+        box-sizing: border-box;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+          Roboto, "Helvetica Neue", Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        line-height: 1.4;
+      }
+
+      body {
+        background-color: #f5f5f5;
+        color: #222;
+        display: flex;
+        flex-direction: column;
+        min-height: 100vh;
+      }
+
+      /* Header */
+      header {
+        background-color: #5e001f; /* Concordia burgundy */
+        color: #fff;
+        border-bottom: 4px solid #c9a646; /* gold stripe */
+        padding: 12px 24px;
+        display: flex;
+        align-items: center;
+      }
+
+      header img {
+        height: 48px;
+        width: auto;
+        margin-right: 12px;
+      }
+
+      header h2 {
+        font-size: 1.1rem;
+        font-weight: 600;
+      }
+
+      /* Main content */
+      main {
+        max-width: 600px;
+        margin: 50px auto;
+        background: #fff;
+        border-radius: 8px;
+        padding: 28px;
+        box-shadow: 0 8px 24px rgba(0, 0, 0, 0.07);
+      }
+
+      h1 {
+        color: #5e001f;
+        text-align: center;
+        margin-bottom: 24px;
+        font-size: 1.5rem;
+      }
+
+      label {
+        display: block;
+        font-weight: 600;
+        color: #333;
+        margin-bottom: 10px;
+        text-align: left;
+      }
+
+      input {
+        display: block;
+        width: 100%;
+        margin-top: 6px;
+        margin-bottom: 16px;
+        padding: 10px;
+        border: 1px solid #bbb;
+        border-radius: 4px;
+        font-size: 0.95rem;
+        background-color: #fff;
+      }
+
+      input:focus {
+        outline: none;
+        border-color: #5e001f;
+        box-shadow: 0 0 0 3px rgba(94, 0, 31, 0.15);
+      }
+
+      button {
+        cursor: pointer;
+        font-size: 0.95rem;
+        border-radius: 4px;
+        font-weight: 600;
+        border: none;
+        padding: 10px 16px;
+        transition: all 0.15s ease;
+        background-color: #5e001f;
+        color: #fff;
+        border: 1px solid #5e001f;
+        display: block;
+        margin: 12px auto 0;
+      }
+
+      button:hover {
+        background-color: #440017;
+        box-shadow: 0 4px 10px rgba(68, 0, 23, 0.4);
+      }
+
+      footer {
+        background-color: #fafafa;
+        color: #777;
+        font-size: 0.75rem;
+        text-align: center;
+        border-top: 1px solid #ddd;
+        padding: 16px;
+        margin-top: auto;
+      }
+    </style>
+  </head>
+
   <body>
-    <h1>Change Username</h1>
-    <label>
-      New Username =
-      <label style="display: inline">
-        <input type="text" id="newUsername" placeholder="Enter new username" />
-        <button id="submit" type="button">Submit</button>
-      </label>
-    </label>
+    <!-- Header -->
+    <header>
+      <img src="concordiaEmblem.png" alt="Concordia Emblem" />
+      <h2>Concordia University — Account Settings</h2>
+    </header>
+
+    <!-- Main content -->
+    <main>
+      <h1>Change Username</h1>
+
+      <label for="newUsername">New Username:</label>
+      <input type="text" id="newUsername" placeholder="Enter new username" />
+
+      <button id="submit" type="button">Submit</button>
+    </main>
+
+    <!-- Footer -->
+    <footer>© Concordia University · All rights reserved</footer>
+
+    <!-- Script -->
     <script>
       document.getElementById("submit").addEventListener("click", function () {
-        alert("Username Has Been Changed");
-        location.href = "LoginPage.html";
+        const newUsername = document
+          .getElementById("newUsername")
+          .value.trim();
+
+        if (!newUsername) {
+          alert("Please enter a new username");
+        } else {
+          alert("Username has been changed!");
+          localStorage.setItem("username", newUsername);
+          location.href = "LoginPage.html";
+        }
       });
     </script>
   </body>
