--- a/resources.html
+++ b/resources.html
@@ -5,13 +5,182 @@
   <title>Manage Resources</title>
   <link rel="stylesheet" href="projectStyle.css">
   <style>
-    body { font-family: Arial, sans-serif; margin: 24px; }
-    .back { margin-bottom: 16px; display:inline-block; }
-    form, .list { border:1px solid #ddd; padding:14px; border-radius:10px; max-width:640px; }
-    .row { display:grid; grid-template-columns: 140px 1fr; gap:10px; margin-bottom:10px; }
-    input, textarea { width:100%; padding:8px; }
-    .actions { display:flex; gap:8px; }
-    .card { border:1px solid #eee; padding:10px; border-radius:8px; margin:8px 0; }
+   
+
+    body {
+      background-color: #f5f5f5;
+      color: #222;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+        Roboto, "Helvetica Neue", Arial, sans-serif;
+      margin: 0;
+      padding: 32px;
+      line-height: 1.4;
+    }
+
+    /* Header bar at top with Concordia colors */
+    .site-header {
+      background-color: #5e001f;           /* burgundy */
+      color: #fff;
+      border-bottom: 4px solid #c9a646;    /* gold accent */
+      padding: 12px 24px;
+      display: flex;
+      align-items: center;
+      margin: -32px -32px 24px -32px;      /* stretch full width since body is padded */
+    }
+
+    .site-header img {
+      height: 48px;
+      width: auto;
+    }
+
+    /* "Back to Dashboard" link */
+    .back {
+      color: #5e001f;
+      font-weight: 600;
+      font-size: 0.9rem;
+      text-decoration: none;
+      background-color: #fff;
+      border: 1px solid #5e001f;
+      border-radius: 4px;
+      padding: 6px 10px;
+      display: inline-block;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.06);
+      transition: all 0.15s ease;
+      margin-bottom: 16px;
+    }
+
+    .back:hover {
+      background-color: #5e001f;
+      color: #fff;
+      box-shadow: 0 4px 10px rgba(94,0,31,0.3);
+    }
+
+    h1 {
+      color: #5e001f;
+      font-size: 1.6rem;
+      font-weight: 600;
+      margin-bottom: 16px;
+    }
+
+    h2 {
+      color: #333;
+      font-size: 1.1rem;
+      font-weight: 600;
+      margin: 24px 0 12px 0;
+    }
+
+    /* Form and list "cards" */
+    form,
+    .list {
+      background-color: #fff;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      max-width: 640px;
+      box-shadow: 0 10px 24px rgba(0,0,0,0.07);
+      padding: 16px 20px;
+    }
+
+    /* the rows inside the form */
+    .row {
+      display: grid;
+      grid-template-columns: 140px 1fr;
+      gap: 10px;
+      margin-bottom: 14px;
+      font-size: 0.95rem;
+      color: #333;
+      font-weight: 600;
+    }
+
+    .row label {
+      color: #5e001f;
+      font-weight: 600;
+      padding-top: 8px;
+      line-height: 1.3;
+    }
+
+    input,
+    textarea {
+      width: 100%;
+      padding: 10px 12px;
+      font-size: 0.95rem;
+      color: #222;
+      background-color: #fff;
+      border: 1px solid #bbb;
+      border-radius: 4px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.03);
+      transition: all 0.15s ease;
+      font-family: inherit;
+    }
+
+    input:focus,
+    textarea:focus {
+      outline: none;
+      border-color: #5e001f;
+      box-shadow: 0 0 0 3px rgba(94,0,31,0.15);
+    }
+
+    /* action buttons ("Save", "Clear", "Edit", "Remove") */
+    .actions {
+      display: flex;
+      gap: 8px;
+      flex-wrap: wrap;
+    }
+
+    .secondaryButton {
+      background-color: #fff;
+      color: #5e001f;
+      border: 1px solid #5e001f;
+      border-radius: 4px;
+      font-size: 0.9rem;
+      font-weight: 600;
+      line-height: 1.2;
+      padding: 8px 14px;
+      cursor: pointer;
+      transition: all 0.15s ease;
+    }
+
+    .secondaryButton:hover {
+      background-color: #5e001f;
+      color: #fff;
+      box-shadow: 0 4px 10px rgba(94,0,31,0.3);
+    }
+
+    /* cards in Existing Resources */
+    .list {
+      padding: 16px 20px;
+    }
+
+    .card {
+      background-color: #fafafa;
+      border: 1px solid #eee;
+      border-radius: 6px;
+      padding: 12px 14px;
+      margin: 10px 0;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.04);
+      font-size: 0.95rem;
+      line-height: 1.4;
+    }
+
+    .card strong {
+      color: #5e001f;
+      font-weight: 600;
+    }
+
+    .card em {
+      color: #444;
+      font-style: normal;
+      font-weight: 500;
+      display: inline-block;
+      margin-top: 4px;
+    }
+
+    .card small {
+      color: #555;
+      display: block;
+      margin-top: 4px;
+      font-size: 0.8rem;
+      line-height: 1.4;
+    }
   </style>
 </head>
 <body>
