i did the statistic page

--- a/studentPage.html
+++ b/studentPage.html
@@ -93,15 +93,15 @@
   }
 /*Booking Table Styling */
 .roomsection {
-  max-width: 1200px;                 /* don't grow super wide on big screens */
-  margin: 0 auto 32px auto;          /* center it and add space under it */
-  background: var(--card-bg);        /* white card background */
-  border: 1px solid var(--card-border);  /* light border */
-  border-radius: 16px;               /* rounded corners like header card */
-  box-shadow: var(--card-shadow);    /* same soft shadow as header */
-  padding: 24px 28px;                /* space INSIDE the card */
-  font-family: inherit;              /* match page font */
-  color: var(--text-main);           /* main text color */
+  max-width: 1200px;                 
+  margin: 0 auto 32px auto;          
+  background: var(--card-bg);        
+  border: 1px solid var(--card-border);  
+  border-radius: 16px;              
+  box-shadow: var(--card-shadow);    
+  padding: 24px 28px;                
+  font-family: inherit;             
+  color: var(--text-main);           
 }
 
 .sectionheader {
