--- a/adminPage.html
+++ b/adminPage.html
@@ -84,7 +84,7 @@
             </a>
           </li>
           <li>
-            <a href="reports.html">
+            <a href="statistic.html">
               Statistics & Reports
               <small>Popular resources, peak times</small>
             </a>
