--- a/approvals.html
+++ b/approvals.html
@@ -3,8 +3,31 @@
   <head>
     <title>Booking Requests</title>
     <link rel="stylesheet" href="projectStyle.css">
+    <style>
+      /* --- Concordia Header Only --- */
+      .site-header {
+        background-color: #5e001f; /* Concordia burgundy */
+        color: #fff;
+        border-bottom: 4px solid #c9a646; /* gold accent stripe */
+        padding: 12px 24px;
+        display: flex;
+        align-items: center;
+      }
+
+      .site-header img {
+        height: 48px;
+        width: auto;
+        margin-right: 12px;
+      }
+    </style>
   </head>
   <body>
+    <!-- Concordia Header -->
+    <header class="site-header">
+      <img src="concordiaEmblem.png" alt="Concordia Emblem">
+      <h2>Concordia University — Booking Requests</h2>
+    </header>
+
     <h1>Pending Booking Requests</h1>
     <div class="redBlock">
       Student: John Doe 
