--- a/statistic.html
+++ b/statistic.html
@@ -19,6 +19,22 @@
       --bg-soft: #faf9fa;
     }
 
+    /* --- Concordia Header --- */
+    .site-header {
+      background-color: #5e001f; /* Concordia burgundy */
+      color: #fff;
+      border-bottom: 4px solid #c9a646; /* gold accent stripe */
+      padding: 12px 24px;
+      display: flex;
+      align-items: center;
+    }
+
+    .site-header img {
+      height: 48px;
+      width: auto;
+      margin-right: 12px;
+    }
+
     body {
       background-color: var(--bg-page);
       color: var(--text-main);
@@ -49,7 +65,6 @@
       row-gap: 6px;
     }
 
-    /* "Total Bookings for the Day", "Most Used Resource", etc */
     .sectionup h2 {
       margin: 0;
       font-size: 0.75rem;
@@ -60,7 +75,6 @@
       text-transform: uppercase;
     }
 
-    /* "35", "Study Room D", "18:00-19:00" */
     .sectionup h1 {
       margin: 0;
       font-size: 1.3rem;
@@ -69,8 +83,6 @@
       line-height: 1.2;
       letter-spacing: -0.03em;
     }
-
-    /* ===================== BOTTOM REPORT CARDS ===================== */
 
     .bottomRow {
       display: flex;
@@ -92,14 +104,12 @@
       row-gap: 16px;
     }
 
-    /* Title area for each report card */
     .typeOfReport {
       display: flex;
       flex-direction: column;
       row-gap: 4px;
     }
 
-    /* "Bookings for Each Room" / "Time Blocks: Popularity in Booking" */
     .typeOfReport h3 {
       margin: 0;
       font-size: 0.9rem;
@@ -109,7 +119,6 @@
       letter-spacing: -0.02em;
     }
 
-    /* The light grey subtext under each h3 */
     .reportSubtext {
       margin: 0;
       font-size: 0.75rem;
@@ -117,7 +126,6 @@
       line-height: 1.4;
     }
 
-    /* box that holds the chart image */
     .chartImageWrapper {
       background: var(--bg-soft);
       border: 1px solid var(--border-soft);
@@ -140,6 +148,12 @@
   </style>
 </head>
 <body>
+
+  <!-- Concordia Header -->
+  <header class="site-header">
+    <img src="concordiaEmblem.png" alt="Concordia Emblem">
+    <h2>Concordia University — Admin Reports</h2>
+  </header>
 
   <main class="pageWrap">
 
